<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <integer name="DEFAULT_P1_COLOR">@integer/COLOR_RED</integer>
    <integer name="DEFAULT_P2_COLOR">@integer/COLOR_BLUE</integer>
    <string name="DEFAULT_P1_NAME" translatable="false">Player 1</string>
    <string name="DEFAULT_P2_NAME" translatable="false">Guest</string>
    <integer name="DEFAULT_AI_DIFFICULTY">1</integer>
    <integer name="DEFAULT_BOARD_SIZE">7</integer>
    <item type="bool" name="DEFAULT_SWAP_ENABLED">true</item>
    <item type="bool" name="DEFAULT_AUTOSAVE_ENABLED">true</item>
</resources>
