<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/preferences_title_timer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/timerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="0"
        android:entries="@array/timerTypeArray"
        android:entryValues="@array/timerTypeValues" />

    <EditText
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="0"
        android:autofillHints=""
        android:hint="@string/preferences_summary_custom_timer"
        android:inputType="number" />

</LinearLayout>
